--- a/momento4js/index.html
+++ b/momento4js/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/renting-63833.appspot.com/o/Dise%C3%B1o_sin_t%C3%ADtulo-removebg-preview.png?alt=media&token=c0c7dda9-2ea6-4456-afe5-39a2859b82fd" />
     <link rel="stylesheet" href="./index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+
     <title>WESTERNWOOD</title>
   </head>
   <body>
@@ -12,6 +19,7 @@
      
       html::-webkit-scrollbar {
            display: none;
+           font-family: 'EB Garamond', serif;
          }
          
          html {
